Fix: [수정] gap, unit props 변경
Refs: #94

--- a/src/features/settings-setting/ui/components/SettingsContainer/SettingsContainer.module.css
+++ b/src/features/settings-setting/ui/components/SettingsContainer/SettingsContainer.module.css
@@ -2,7 +2,6 @@
   padding: 10px;
   display: flex;
   flex-direction: column;
-  gap: 10px;
 }
 
 .container:not(:last-child) {
